chore: (DHEI-14372) Use open sourced parent 4.0.0